// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballSummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hOxnUM"
  >
    <div
      class="sc-htpNat sc-bxivhb kRDlKQ"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballSummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iGGGrD"
  >
    <div
      class="sc-htpNat sc-bxivhb kRDlKQ"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
